# oneio

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PR71_REVIEW_ISSUES.md  README.md  README.tpl  TEST_PLAN.md  build.rs
.github/: copilot-instructions.md
.github/workflows/: release.yml  rust.yml
benches/: bzip2_decompress.rs  gzip_decompress.rs
benches/common/: mod.rs
docs/: FEATURE-SIMPLIFICATION-2025.md  README.md
examples/: async_read.rs  progress_tracking.rs  read_csv_in_tar.rs  s3_operations.rs  test_crypto_provider.rs
scripts/: bench_decompression_backends.sh
specs/: README.md
specs/02-lossy-read/: README.md
specs/03-reqwest-reexport-http-gzip/: README.md
specs/rusty-s3-migration/: README.md
src/: async_reader.rs  builder.rs  client.rs  compression.rs  crypto.rs  digest.rs  error.rs  lib.rs  progress.rs  remote.rs  resumable_http.rs  s3.rs
src/oneio/: bzip2.rs  crypto.rs  digest.rs  gzip.rs  lz4.rs  mod.rs  remote.rs  s3.rs  utils.rs  xz.rs
src/oneio/compressions/: bzip2.rs  gzip.rs  lz4.rs  mod.rs  xz.rs  zstd.rs
src/s3/: config.rs  mod.rs
tests/: CERTIFICATES.md  async_integration.rs  basic_integration.rs  http_advanced_tests.rs  lossy_read_tests.rs  oneio_test.rs  s3_integration.rs  test-cert.der  test-cert.pem  test-key.pem  test_data.json  test_data.txt  test_data.txt.bz2  test_data.txt.lz4  test_data.txt.xz  test_data.txt.zst
