[package]
name = "oneio"
version = "0.15.8"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/bgpkit/oneio"
documentation = "https://docs.rs/oneio"
description = """
OneIO is a Rust library that provides unified simple IO interface for
reading and writing to and from data files from different sources and compressions.
"""
default-run = "oneio"
keywords = ["io", "util", "s3", "ftp"]

[[bin]]
name="oneio"
path="src/bin/oneio.rs"
required-features=["cli"]

[dependencies]
# remote
reqwest = {version="0.11", default-features=false, features = ["blocking"], optional=true }

# compression
libflate = {version = "2", optional=true }
bzip2 = {version = "0.4.4", optional = true }
lz4 = {version = "1.24", optional = true }
xz2 = {version = "0.1", optional = true }

# cli
clap = {version= "4.1", features=["derive"], optional=true}
tracing = {version="0.1.37", optional=true}

# json
serde = {version="1.0", optional=true }
serde_json = {version="1.0", optional=true }

# s3
rust-s3 = {version="0.34.0-rc4", optional=true, default-features=false, features=["sync"]}
dotenvy = {version="0.15.7", optional=true}

# ftp
suppaftp = { version = "^5.1.0", optional = true }

thiserror = "1.0"

openssl = { version = "0.10", features = ["vendored"], optional = true }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"